<resources>
    <string name="app_name">To-Do List</string>
    <string name="Priority">Priority:</string>
    <string name="rb_low">Low</string>
    <string name="rb_medium">Medium</string>
    <string name="rb_high">High</string>
    <string name="Save">Save</string>
    <string name="nullString" />
    <string name="nullstring" />
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>
